# REAL_STATE_QA

./: .gitignore  README.md  pyproject.toml
config/: login.yaml  mysql -template.yaml
models/cfg/: config.yaml
resq/app/: app.py  functional.py
resq/ddbb/: database.py
resq/llm/: model.py
resq/logger/: logger.py
scripts/: app.py  launch_app.py
templates/: chatML.yaml
